--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="wrapper">
     
 	<div id="header">
-		<div id="nav"><center> <a href="index.html">Home</a> | <a href="#">About Me</a> | <a href="#">Project</a> | <a href="https://github.com/chunyiwang/chunyiwang.github.io/blob/master/contact.html">Contact Me</a> |
+		<div id="nav"><center> <a href="index.html">Home</a> | <a href="#">About Me</a> | <a href="#">Project</a> | <a href="chunyiwang.github.io/contact.html">Contact Me</a> |
 		</a></center></div>
 		<div id="bg"></div>
 	</div>
