--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="wrapper">
     
 	<div id="header">
-		<div id="nav"><center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="#">Project</a> | <a href="/contact.html">Résumé</a> | <a href="/contact.html">Contact Me</a> |
+		<div id="nav"><center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="#">Project</a> | <a href="/Resume uploaded.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |
 		</a></center></div>
 		<div id="bg"></div>
 	</div>
