--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 </head>
 <body>
-   <center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/poster.pdf">Project</a> | <a href="/Resume uploaded.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |
+   <center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="/Resume uploaded.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |
 		</a></center>
 		<center>Welcome to Chunyi Wang's Webpage</center>
 			</div>
