--- a/my project.html
+++ b/my project.html
@@ -13,6 +13,6 @@
 -A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
 </p>
 <li><a href="poster.pdf">Poster</a></li>
-<li><a href="index.html">Presentation slides</a></li>
+<li><a href="bnct.pdf">Presentation slides</a></li>
 </body>
 </html>
