--- a/my project.html
+++ b/my project.html
@@ -11,6 +11,14 @@
 					<li>Title:</li>
 					<p>What compound should be used for Boron Neutron Capture Therapy? <BR>
 -A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
+
+	<p>I went to the medical physics department in the Birmingham university and had an interview with professor Stuart Green, he showed me the accelerator and the laboratory two floors under the accelerator ,they have been studied BNCT for nearly 20 years
+
+They currently use BPA as their agents and they are applying for more funding from the cancer research.
+
+There are very few neutron accelerators in the world, which limits the number of trails that are able to carry on.
+
+				
 </p>
 <li><a href="poster.pdf">Poster</a></li>
 <li><a href="bnct.pdf">Presentation slides</a></li>
