--- a/about me.html
+++ b/about me.html
@@ -6,7 +6,7 @@
 </head>
 <h1>1B Mathematics Co-op Student at University of Waterloo</h1>
 				<ul style="margin-top:16px;">
-<h2>Courses I take</h2>
+<h2>Courses at University</h2>
     <li>CS 135 Designing Functional Programs</li>
 	<li>ECON 101 Introduction to Microeconmics</li>
 	<li>ENGL 109 Introduction to Academic Writing</li>
