--- a/about me.html
+++ b/about me.html
@@ -7,11 +7,13 @@
 <h1>1B Mathematics Co-op Student at University of Waterloo</h1>
 				<ul style="margin-top:16px;">
 <h2>Courses at University</h2>
+<h3> Winter 2016</h3>
     <li>CS 135 Designing Functional Programs</li>
 	<li>ECON 101 Introduction to Microeconmics</li>
 	<li>ENGL 109 Introduction to Academic Writing</li>
 	<li>MATH 135 Algebra for Honours Mathematics</li>
 	<li>MATH 138 Calculus 2 for Honours Mathematics</li>
+<h4>Spring 2016</h4>
 	<li>CS 136  Elementary Algorithm Design and Data Abstraction</li>
 	<li>ECON 102 Introduction to Macroeconmics</li>
 	<li>ECON 201  Microeconomic Theory 1 </li>
