--- a/about me.html
+++ b/about me.html
@@ -4,6 +4,7 @@
     <title>about me </center></title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 </head>
+<body>
 <h1>1B Mathematics Co-op Student at University of Waterloo</h1>
 				<ul style="margin-top:16px;">
 <h2>Courses at University</h2>
@@ -19,5 +20,6 @@
 	<li>ECON 201  Microeconomic Theory 1 </li>
 	<li>PD 1 Co-op Fundamentals</li>
 	<li>STAT 230 Probability</li>
+</body>
 	</html>
 				
