--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>  Chunyi Wang's Personal Website </center></title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
+	 <link href="css/blog.min.css" rel="stylesheet">
 </head>
 <body>
    <center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="Resume - V.1.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |
