--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>  Chunyi Wang's Personal Website </center></title>
+    <title class="big-title">  Chunyi Wang's Personal Website </center></title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 	 <link href="/index.css" rel="stylesheet">
 </head>
