--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title class="big-title">  Chunyi Wang's Personal Website </center></title>
+    <title>  Chunyi Wang's Personal Website </center></title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 	 <link href= "index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
    <center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="Resume - V.1.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |
 		</a></center>
-		<center>Welcome to Chunyi Wang's Webpage</center>
+		<h1 class="big-title"> <center>Welcome to Chunyi Wang's Webpage</center> </h1>
 </body>
 </html>
