--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>  Chunyi Wang's Personal Website </center></title>
-	<link href= "style.css" rel= "stylesheet" type="text/css">
-	 <link href= "/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 <body>
    <p class="guidence"><center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="resume-v13.1.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |</p>
