--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <link rel="stylesheet" type="text/css" href="index.css">
      </head>
      <body>
-          <p class="guidence"><center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="resume-v13.1.pdf">Résumé</a> | <a href="/contact.html">Contact Me</a> |</p>
+          <p class="guidence"><center> <a href="index.html">Home</a> | <a href="/about me.html">About Me</a> | <a href="/my project.html">Project</a> | <a href="resume-v13.1.pdf">Résumé</a> | <a href="c422wang@uwaterloo.ca">Contact Me</a> |</p>
 		</a></center>
 		<h1 class="big-title"> <center>Welcome to Chunyi Wang's Webpage</center> </h1>
      </body>
