--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="http://www.w3schools.com">www.w3schools.com</a></p> 
+  <p>The page contains source from<a href="http://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
 
 </body>
