--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">WHO</a></li>
-        <li><a href="#">PROJECT</a></li>
-        <li><a href="#">RESUME</a></li>
+        <li><a href = "/my project.html">PROJECT</a></li>
+        <li><a href="resume-v13.1.pdf">RESUME</a></li>
       </ul>
     </div>
   </div>
