--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">WHO</a></li>
+        <li><a href="/about me.html">WHO</a></li>
         <li><a href = "/my project.html">PROJECT</a></li>
         <li><a href="resume-v13.1.pdf">RESUME</a></li>
       </ul>
