--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/about me.html">WHO</a></li>
         <li><a href = "/my project.html">PROJECT</a></li>
         <li><a href="resume-v13.1.pdf">RESUME</a></li>
+        <li><a href="www.linkedin.com/in/wangchunyi">Linkedin</a></li>
       </ul>
     </div>
   </div>
