--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href = "/my project.html">PROJECT</a></li>
         <li><a href="resume-v13.1.pdf">RESUME</a></li>
-        <li><a href="www.linkedin.com/in/wangchunyi">Linkedin</a></li>
+        <li><a href="www.linkedin.com/in/wangchunyi">LINKEDIN</a></li>
       </ul>
     </div>
   </div>
