--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">What Am I?</h3>
-  <p>1B Mathematics Co-op Student at University of Waterloo</p>
+  <p>2A Mathematics Co-op Student at University of Waterloo</p>
 </div>
 
 <!-- Footer -->
