--- a/my project.html
+++ b/my project.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My project</center></title>
+    <title>My project</title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 </head>
 <body>
 <h1 class="large_title">Extended Project</h1>
 <p>Boron Neutron Capture Therapy</p>
-				<ul style="margin-top:16px;">
-					<li>Title:</li>
-					<p>What compound should be used for Boron Neutron Capture Therapy? <BR>
+				
+	<ul style="margin-top:16px;">
+				<li>Title:</li>
+		<p>What compound should be used for Boron Neutron Capture Therapy? <BR>
 -A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
 
-	<p>I went to the medical physics department in the Birmingham university and had an interview with professor Stuart Green, he showed me the accelerator and the laboratory two floors under the accelerator ,they have been studied BNCT for nearly 20 years
+<p>I went to the medical physics department in the Birmingham university and had an interview with professor Stuart Green, he showed me the accelerator and the laboratory two floors under the accelerator ,they have been studied BNCT for nearly 20 years
 
 They currently use BPA as their agents and they are applying for more funding from the cancer research.
 
