--- a/my project.html
+++ b/my project.html
@@ -4,6 +4,21 @@
     <title>My project</title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 </head>
+	
+	<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Me</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href = "/my project.html">PROJECT</a></li>
+        <li><a href="resume-v13.1.pdf">RESUME</a></li>
+        <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <body>
 <h1 class="large_title">Extended Project</h1>
 <p>Boron Neutron Capture Therapy</p>
