--- a/my project.html
+++ b/my project.html
@@ -4,37 +4,47 @@
     <title>My project</title>
 	<link href= "style.css" rel= "stylesheet" type="text/css">
 </head>
-	
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Me</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href = "/my project.html">PROJECT</a></li>
-        <li><a href="resume-v13.1.pdf">RESUME</a></li>
-        <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-	
+
 <body>
-<h1 class="large_title">Extended Project</h1>
-<p>Boron Neutron Capture Therapy</p>
-<ul style="margin-top:16px;">
-<li>Title:</li>
-<p>What compound should be used for Boron Neutron Capture Therapy? <BR>
--A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
+    <nav class="navbar navbar-default">
+        <div class="container">
+             <div class="navbar-header">
+                 <a class="navbar-brand" href="#">Me</a>
+         </div>
+                 
+        <div class="collapse navbar-collapse" id="myNavbar">
+             <ul class="nav navbar-nav navbar-right">
+                  <li><a href = "/my project.html">PROJECT</a></li>
+                   <li><a href="resume-v13.1.pdf">RESUME</a></li>
+                    <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
+             </ul>
+        </div>
+    </nav>
 
-<p>I went to the medical physics department in the Birmingham university and had an interview with professor Stuart Green, he showed me the accelerator and the laboratory two floors under the accelerator ,they have been studied BNCT for nearly 20 years
+    <div id ="page_title">
+        <h1 class="large_title">Extended Project</h1>
+    </div>
 
-They currently use BPA as their agents and they are applying for more funding from the cancer research.
+    <div id = "project_title">
+        <p>Boron Neutron Capture Therapy</p>
+    </div>
+    <li>Title:</li>
+    <p>What compound should be used for Boron Neutron Capture Therapy? <BR>
 
-There are very few neutron accelerators in the world, which limits the number of trails that are able to carry on.
-</p>
-<li><a href="poster.pdf">Poster</a></li>
-<li><a href="bnct.pdf">Presentation slides</a></li>
+    <div id="small-title">
+     -A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
+    </div>
+
+    <div id = "introduction">
+        <p>I went to the medical physics department in the Birmingham university and had an interview with professor Stuart Green, he showed me the accelerator and the laboratory two floors under the accelerator ,they have been studied BNCT for nearly 20 years
+            They currently use BPA as their agents and they are applying for more funding from the cancer research.
+            There are very few neutron accelerators in the world, which limits the number of trails that are able to carry on.
+            </p>
+    </div>
+
+    <div id = "links">
+        <li><a href="poster.pdf">Poster</a></li>
+        <li><a href="bnct.pdf">Presentation slides</a></li>
+    </div>
 </body>
 </html>
