--- a/my project.html
+++ b/my project.html
@@ -31,7 +31,7 @@
     <li>Title:</li>
     <p>What compound should be used for Boron Neutron Capture Therapy? <BR>
 
-    <div id="small-title">
+    <div id="small_title">
      -A comparison between boron phenylalanine, sodium borocaptate and the third generation agents
     </div>
 
