--- a/my project.html
+++ b/my project.html
@@ -25,8 +25,10 @@
                     <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
              </ul>
         </div>
-    </nav>
-
+		</nav>
+	
+<div class="container-fluid bg-1 text-center">	    
+	    
     <div id ="page_title">
         <h1 class="large_title">Extended Project</h1>
     </div>
@@ -47,7 +49,7 @@
             There are very few neutron accelerators in the world, which limits the number of trails that are able to carry on.
             </p>
     </div>
-
+</div>
     <div id = "links">
         <li><a href="poster.pdf">Poster</a></li>
         <li><a href="bnct.pdf">Presentation slides</a></li>
