--- a/my project.html
+++ b/my project.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
              <div class="navbar-header">
-                 <a class="navbar-brand" href="#">Me</a>
+                 <a class="navbar-brand" href="/index.html">Me</a>
          </div>
                  
         <div class="collapse navbar-collapse" id="myNavbar">
