--- a/my project.html
+++ b/my project.html
@@ -49,9 +49,12 @@
             </p>
     </div>
 </div>
+	    
+<div class="container-fluid bg-2 text-center">
     <div id = "links">
         <li><a href="poster.pdf">Poster</a></li>
         <li><a href="bnct.pdf">Presentation slides</a></li>
     </div>
+	</div>
 </body>
 </html>
