--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href = "/my project.html">PROJECT</a></li>
-        <li><a href="resume-v13.1.pdf">RESUME</a></li>
+        <li><a href="Resume V4.1 2.pdf">RESUME</a></li>
         <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
       </ul>
     </div>
