--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <li><a href="Resume V4.1 2.pdf">RESUME</a></li>
         <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
       </ul>
+   <select> 
+    <option value="" selected="selected">Select</option>    
+    <option value="/">Home</option> 
+    <option value="/my project.html">PROJECT</option> 
+    <option value="resume-v13.1.pdf">RESUME/option> 
+    <option value="https://linkedin.com/in/wangchunyi">LINKEDIN</option> 
+  </select> 
     </div>
   </div>
 </nav>
