--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <option value="" selected="selected">Select</option>    
     <option value="/">Home</option> 
     <option value="/my project.html">PROJECT</option> 
-    <option value="resume-v13.1.pdf">RESUME/option> 
+    <option value="resume-v13.1.pdf">RESUME</option> 
     <option value="https://linkedin.com/in/wangchunyi">LINKEDIN</option> 
   </select> 
     </div>
