--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href = "/my project.html">PROJECT</a></li>
-        <li><a href="Resume V4.1 2.pdf">RESUME</a></li>
+        <li><a href="/Resume%20V5.pdf">RESUME</a></li>
         <li><a href="https://linkedin.com/in/wangchunyi">LINKEDIN</a></li>
       </ul>
    <select> 
     <option value="" selected="selected">Select</option>    
     <option value="/">Home</option> 
     <option value="/my project.html">PROJECT</option> 
-    <option value="resume-v13.1.pdf">RESUME</option> 
+    <option value="/Resume V5.pdf">RESUME</option> 
     <option value="https://linkedin.com/in/wangchunyi">LINKEDIN</option> 
   </select> 
     </div>
@@ -46,7 +46,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">What Am I?</h3>
-  <p>2B Mathematics Co-op Student at University of Waterloo</p>
+  <p>3B Mathematics Co-op Student at University of Waterloo</p>
 </div>
 
 <!-- Footer -->
